# plasma-widget-cwp-1.5.14-el

./: CMakeLists.txt  ChangeLog  README  config.cpp  config.h  config.ui  plasma-applet-cwp.desktop  plasma-cwp-data-provider.cpp  plasma-cwp-data-provider.h  plasma-cwp-graphics-widget.cpp  plasma-cwp-graphics-widget.h  plasma-cwp-paint-helper.cpp  plasma-cwp-paint-helper.h  plasma-cwp-pixmap-dialog.cpp  plasma-cwp-pixmap-dialog.h  plasma-cwp-pixmap-list-dialog.cpp  plasma-cwp-pixmap-list-dialog.h  plasma-cwp-popup-applet.cpp  plasma-cwp-popup-applet.h  plasma-cwp.cpp  plasma-cwp.h  version.h
data/: br_weather_com.xml  de_weather_com.xml  espanol_weather_com.xml  fr_weather_com.xml  freemeteo_com_celsius.xml  freemeteo_com_fahrenheit.xml  ilmeteo_it.xml  in_weather_com.xml  myforecast_com_celsius.xml  myforecast_com_fahrenheit.xml  pogodynka_pl.xml  satellite_images.xml  uk_weather_com.xml  wetter_com.xml  www_accuweather_com_us_celsius.xml  www_accuweather_com_us_fahrenheit.xml  www_accuweather_com_world_celsius.xml  www_accuweather_com_world_fahrenheit.xml  www_gismeteo_com.xml  www_weather_com.cn.xml  www_weather_com.xml
po/: CMakeLists.txt  background.list  br.po  de.po  el.po  es.po  extract_messages.sh  fr.po  hu.po  it.po  nb.po  nl.po  pl.po  plasma_applet_cwp.pot  ro.po  ru.po  satellite.list  sr.po  sr@latin.po  tr.po  zh_CN.po
